[package]
name = "rusty_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
